# v4l2CppWrapper

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  manifest.json  v4l2_capture.hpp  vcpkg.json
src/: CMakeLists.txt
src/libv4l2-capture/: CMakeLists.txt  utils.cpp  utils.hpp  v4l2_capture.cpp  v4l2_capture.hpp
src/main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  tests.cpp
